fix: radient, feat: scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,20 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Width of the scrollbar */
+::-webkit-scrollbar {
+  width: 6px; /* Customize width */
+}
+
+/* Track (the background of the scrollbar) */
+::-webkit-scrollbar-track {
+  background: #00162b; /* Customize track color */
+}
+
+/* Handle (the scrolling part) */
+::-webkit-scrollbar-thumb {
+  background-color: #75fede; /* Customize the handle color */
+  border-radius: 10px; /* Make the handle rounded */
+  border: 3px solid transparent; /* Add padding inside the handle */
+}
